objects/APXTCFQ__Conga_Solution_Template__c.object
<CustomObject>
    <fields>
        <fullName>APXTCFQ__Comments__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__Conga_Solution__c</fullName>
        <label>Conga Solution</label>
        <referenceTo>APXTCFQ__Conga_Solution__c</referenceTo>
        <relationshipLabel>Conga Solution Templates</relationshipLabel>
        <relationshipName>Conga_Solution_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__Conga_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Conga Template</label>
        <referenceTo>APXTCFQ__Conga_Template__c</referenceTo>
        <relationshipLabel>Conga Solution Templates</relationshipLabel>
        <relationshipName>Conga_Solution_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__Output_File_Name__c</fullName>
        <label>Output File Name (OFN)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__Template_Extension__c</fullName>
        <label>Template Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__Template_Group__c</fullName>
        <formula>APXTCFQ__Conga_Template__r.APXTCFQ__Template_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTCFQ__Template_Name__c</fullName>
        <formula>APXTCFQ__Conga_Template__r.APXTCFQ__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Name</label>
        <type>Text</type>
    </fields>
    <label>Conga Solution Template</label>
    <nameField>
        <displayFormat>CST-{00000}</displayFormat>
        <label>Conga Solution Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Solution Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>